--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Penguin Fashion</title>
 
     <!-- tailwind css link added star -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -182,8 +182,8 @@
             <!-- ------------end jacket section---------- -->
 
       <section>
-        <div class="bg-neutral-100 rounded-2xl md:grid-cols-1 lg:grid grid-cols-2 gap-7">
-          <div class="flex items-center bg-neutral-100 pt-10">
+        <div class="bg-neutral-100 rounded-2xl lg:grid grid-cols-2 gap-7">
+          <div class="flex items-center bg-neutral-100">
             <img src="images/house.png" alt="">
             <div>
               <h1 class="text-3xl font-semibold">Find the Perfect Fit</h1>
@@ -191,8 +191,10 @@
               offer styles for every body.</p>
             </div>
           </div>
-          
-          <div class="bg-neutral-100 flex items-center pt-10">
+          <div class="row-span-3 items-center flex">
+            <img src="images/shopping.png" alt="">
+          </div>
+          <div class="bg-neutral-100 flex items-center">
             <img src="images/question.png" alt="">
             <div>
               <h1 class="text-3xl font-semibold">Find the Perfect Fit</h1>
@@ -200,16 +202,13 @@
               offer styles for every body.</p>
             </div>
           </div>
-          <div class="bg-neutral-100 flex items-center pt-10">
+          <div class="bg-neutral-100 flex items-center">
             <img src="images/box.png" alt="">
             <div>
               <h1 class="text-3xl font-semibold">Find the Perfect Fit</h1>
               <p class="text-2xl">Everybody is different, which is why we
               offer styles for every body.</p>
             </div>
-          </div>
-          <div class="row-span-3 items-center flex pt-12">
-            <img src="images/shopping.png" alt="">
           </div>
         </div>
       </section>      
