--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           </section>
     </main>
     <footer>
-      <h1 class="text-xl font-semibold text-center pb-12 pt-20">© 2022 Penguin Fashion | Made in Bangladesh | All prices are in USD</h1>
+      <h1 class="text-xl font-semibold text-center pb-12 pt-20">© 2022 Penguin Fashion | Develop by Tajin Shawon | All prices are in USD</h1>
     </footer>
 </body>
 </html>
